cart + product update commit

--- a/public/stylesheets/cart.css
+++ b/public/stylesheets/cart.css
@@ -89,3 +89,32 @@ main {
 .shipping-information form label {
   font-size: 1.5rem;
 }
+
+.payment-information {
+  border: none;
+}
+.payment-information form {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  gap: 1rem;
+  height: 100%;
+  border: 1px solid black;
+  border-radius: 5px;
+  padding: 1rem;
+}
+
+.payment-information form div {
+  border: 1px solid black;
+  border-radius: 5px;
+  padding: 1rem;
+}
+
+.payment-information form div label {
+  font-size: 1.6rem;
+  vertical-align: middle;
+}
+.payment-information form div input {
+  vertical-align: middle;
+  margin-right: 1rem;
+}
